--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=sa12345678;"
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=Sal12345678;"
   },
   "EmailSettings": {
     "FromAddress": "lemasac@hotmail.com",
